// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExerciseToolbar conditionally renders icons 2`] = `
.c0 {
  position: absolute;
  background: #fff;
  width: 4.5rem;
  border: 1px solid #e4e4e4;
  background: #fff;
  margin: 2rem 0 0 2rem;
  z-index: 1;
}

.c0 > * {
  height: 4.7rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #818181;
  background: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > *:after {
  border-bottom: 1px solid #f1f1f1;
}

.c0 > * svg {
  width: 4.3rem;
  height: 1.6rem;
  -webkit-transition: color 150ms;
  transition: color 150ms;
}

.c0 > * span {
  display: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-size: 1.4rem;
  color: #424242;
}

.c0 > *:hover {
  box-shadow: rgba(0,0,0,0.2) 0px 0px 2px;
  width: 20rem;
}

.c0 > *:hover svg {
  color: #424242;
}

.c0 > *:hover span {
  display: block;
}

@media (min-width:1000px) {
  .c0 {
    display: none;
  }
}

@media (max-width:999px) {
  .c0 {
    display: none;
  }
}

@media (max-width:600px) {
  .c0 {
    display: block;
    position: relative;
    width: auto;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin: 0;
  }

  .c0:not(:last-child) {
    border-bottom: 0;
  }

  .c0 > * {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    padding: 1rem 1.8rem 0.6rem;
    height: auto;
    min-height: 4.8rem;
  }

  .c0 > *:hover {
    width: auto;
  }

  .c0 > * span {
    display: block;
    font-size: 1.4rem;
    margin-top: 0.2rem;
    color: #818181;
    text-align: center;
  }

  .c0 > * + * {
    border-left: 1px solid #e4e4e4;
  }
}

<div
  className="c0"
>
  <a
    href="https://openstax.org"
    target="_blank"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-triangle-exclamation "
      data-icon="triangle-exclamation"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 32c14.2 0 27.3 7.5 34.5 19.8l216 368c7.3 12.4 7.3 27.7 .2 40.1S486.3 480 472 480H40c-14.3 0-27.6-7.7-34.7-20.1s-7-27.8 .2-40.1l216-368C228.7 39.5 241.8 32 256 32zm0 128c-13.3 0-24 10.7-24 24V296c0 13.3 10.7 24 24 24s24-10.7 24-24V184c0-13.3-10.7-24-24-24zm32 224c0-17.7-14.3-32-32-32s-32 14.3-32 32s14.3 32 32 32s32-14.3 32-32z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <span>
      Suggest a correction
    </span>
  </a>
</div>
`;

exports[`ExerciseToolbar conditionally renders icons 3`] = `
.c0 {
  position: absolute;
  background: #fff;
  width: 4.5rem;
  border: 1px solid #e4e4e4;
  background: #fff;
  margin: 2rem 0 0 2rem;
  z-index: 1;
}

.c0 > * {
  height: 4.7rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #818181;
  background: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > *:after {
  border-bottom: 1px solid #f1f1f1;
}

.c0 > * svg {
  width: 4.3rem;
  height: 1.6rem;
  -webkit-transition: color 150ms;
  transition: color 150ms;
}

.c0 > * span {
  display: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-size: 1.4rem;
  color: #424242;
}

.c0 > *:hover {
  box-shadow: rgba(0,0,0,0.2) 0px 0px 2px;
  width: 20rem;
}

.c0 > *:hover svg {
  color: #424242;
}

.c0 > *:hover span {
  display: block;
}

@media (min-width:1000px) {
  .c0 {
    display: none;
  }
}

@media (max-width:999px) {
  .c0 {
    display: none;
  }
}

@media (max-width:600px) {
  .c0 {
    display: block;
    position: relative;
    width: auto;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin: 0;
  }

  .c0:not(:last-child) {
    border-bottom: 0;
  }

  .c0 > * {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    padding: 1rem 1.8rem 0.6rem;
    height: auto;
    min-height: 4.8rem;
  }

  .c0 > *:hover {
    width: auto;
  }

  .c0 > * span {
    display: block;
    font-size: 1.4rem;
    margin-top: 0.2rem;
    color: #818181;
    text-align: center;
  }

  .c0 > * + * {
    border-left: 1px solid #e4e4e4;
  }
}

<div
  className="c0"
>
  <a
    href="https://openstax.org"
    target="_blank"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-book-open "
      data-icon="book-open"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M249.6 471.5c10.8 3.8 22.4-4.1 22.4-15.5V78.6c0-4.2-1.6-8.4-5-11C247.4 52 202.4 32 144 32C87.5 32 35.1 48.6 9 59.9c-5.6 2.4-9 8-9 14V454.1c0 11.9 12.8 20.2 24.1 16.5C55.6 460.1 105.5 448 144 448c33.9 0 79 14 105.6 23.5zm76.8 0C353 462 398.1 448 432 448c38.5 0 88.4 12.1 119.9 22.6c11.3 3.8 24.1-4.6 24.1-16.5V73.9c0-6.1-3.4-11.6-9-14C540.9 48.6 488.5 32 432 32c-58.4 0-103.4 20-123 35.6c-3.3 2.6-5 6.8-5 11V456c0 11.4 11.7 19.3 22.4 15.5z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <span>
      View topic in textbook
    </span>
  </a>
</div>
`;

exports[`ExerciseToolbar matches snapshot 1`] = `
.c0 {
  position: absolute;
  background: #fff;
  width: 4.5rem;
  border: 1px solid #e4e4e4;
  background: #fff;
  margin: 2rem 0 0 2rem;
  z-index: 1;
}

.c0 > * {
  height: 4.7rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #818181;
  background: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > *:after {
  border-bottom: 1px solid #f1f1f1;
}

.c0 > * svg {
  width: 4.3rem;
  height: 1.6rem;
  -webkit-transition: color 150ms;
  transition: color 150ms;
}

.c0 > * span {
  display: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-size: 1.4rem;
  color: #424242;
}

.c0 > *:hover {
  box-shadow: rgba(0,0,0,0.2) 0px 0px 2px;
  width: 20rem;
}

.c0 > *:hover svg {
  color: #424242;
}

.c0 > *:hover span {
  display: block;
}

@media (min-width:1000px) {
  .c0 {
    display: none;
  }
}

@media (max-width:999px) {
  .c0 {
    display: none;
  }
}

@media (max-width:600px) {
  .c0 {
    display: block;
    position: relative;
    width: auto;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin: 0;
  }

  .c0:not(:last-child) {
    border-bottom: 0;
  }

  .c0 > * {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    padding: 1rem 1.8rem 0.6rem;
    height: auto;
    min-height: 4.8rem;
  }

  .c0 > *:hover {
    width: auto;
  }

  .c0 > * span {
    display: block;
    font-size: 1.4rem;
    margin-top: 0.2rem;
    color: #818181;
    text-align: center;
  }

  .c0 > * + * {
    border-left: 1px solid #e4e4e4;
  }
}

<div
  className="c0"
>
  <a
    href="https://openstax.org"
    target="_blank"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-book-open "
      data-icon="book-open"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M249.6 471.5c10.8 3.8 22.4-4.1 22.4-15.5V78.6c0-4.2-1.6-8.4-5-11C247.4 52 202.4 32 144 32C87.5 32 35.1 48.6 9 59.9c-5.6 2.4-9 8-9 14V454.1c0 11.9 12.8 20.2 24.1 16.5C55.6 460.1 105.5 448 144 448c33.9 0 79 14 105.6 23.5zm76.8 0C353 462 398.1 448 432 448c38.5 0 88.4 12.1 119.9 22.6c11.3 3.8 24.1-4.6 24.1-16.5V73.9c0-6.1-3.4-11.6-9-14C540.9 48.6 488.5 32 432 32c-58.4 0-103.4 20-123 35.6c-3.3 2.6-5 6.8-5 11V456c0 11.4 11.7 19.3 22.4 15.5z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <span>
      View topic in textbook
    </span>
  </a>
  <a
    href="https://openstax.org"
    target="_blank"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-triangle-exclamation "
      data-icon="triangle-exclamation"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 32c14.2 0 27.3 7.5 34.5 19.8l216 368c7.3 12.4 7.3 27.7 .2 40.1S486.3 480 472 480H40c-14.3 0-27.6-7.7-34.7-20.1s-7-27.8 .2-40.1l216-368C228.7 39.5 241.8 32 256 32zm0 128c-13.3 0-24 10.7-24 24V296c0 13.3 10.7 24 24 24s24-10.7 24-24V184c0-13.3-10.7-24-24-24zm32 224c0-17.7-14.3-32-32-32s-32 14.3-32 32s14.3 32 32 32s32-14.3 32-32z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <span>
      Suggest a correction
    </span>
  </a>
</div>
`;
